# token-2022

./: .gitignore  Anchor.devnet.toml  Anchor.mainnet.toml  Anchor.toml  BUILD_COMPLETE.md  Cargo.toml  DEMO_README.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PackageSorter.java  README.md  build-manual.sh  demo-script.md  demo-setup.sh  package-lock.json  package.json  rust-toolchain.toml  setup.sh  test.ts  tsconfig.json
app/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
app/.next/: BUILD_ID  prerender-manifest.js  trace
app/.next/cache/: .tsbuildinfo
app/.next/cache/webpack/client-development/: index.pack.gz.old
app/.next/cache/webpack/client-production/: 1.pack  2.pack  (+1 more)
app/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js
app/.next/server/pages/: 404.html  500.html  _app.js  _error.js  index.html
app/.next/static/MMI965xWCCgpZDfa-dI0Y/: _buildManifest.js
app/.next/static/chunks/: 119.f764174ad020c9cf.js  156.e24ec6d5b29ceabf.js  22-31a29366f5e241a5.js  523.25dd4431509aa336.js  525.605cd6f4a6bc9b13.js  789.c65f5d05c4cf1b98.js  794-23f06795d53f00ee.js  webpack-0df342f4e2c0dae3.js
app/.next/static/css/: b00e3966c6f922ea.css
app/.next/static/tLUiFY0fSiZTRs6fmqAVd/: _buildManifest.js
app/public/: index.html
app/src/: App.tsx  index.css
app/src/components/: Header.tsx  LiquidityProvider.tsx  PoolCreator.tsx  SwapInterface.tsx  TokenCreator.tsx
app/src/pages/: CreatePool.tsx  CreateToken.tsx  Home.tsx  Liquidity.tsx  Trade.tsx  _app.tsx  index.tsx
app/src/styles/: globals.css
app/src/utils/: solana.ts
docs/: api.md  deployment.md  development.md  security.md
programs/token-2022-amm/: Cargo.toml
programs/token-2022-amm/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/token-2022-amm/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  simulate_transfer.rs  swap.rs  update_hook_whitelist.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
scripts/: deploy.sh  deploy.ts  setup.sh
sdk/: token2022-amm-sdk.ts
tests/: token-2022-amm.ts  token-amm.ts
utils/: env.ts
(+5 files in other folders)
