[package]
name = "transfer-hook"
version = "0.1.0"
description = "Sample Transfer Hook for Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-token-2022.workspace = true
spl-transfer-hook-interface.workspace = true
borsh.workspace = true
